Make xdg output usage compatible with zxdg_output_v1 version 3.

In version 3, zxdg_output_v1.done is explicitly deprecated and not gonna
be used by xwayland if version 3 is used. This would require
wl_output.done to be used instead of flush the zxdg_output_v1 updates.
Move all the update xdg_output before wl_output to ensure wl_output done
will capture all the changes to xdg_output.

BUG: 433224